<resources>
    <string name="app_name">Historical Events</string>
    <string name="submit_button">Visit Events</string>
    <string name="home_title">Timeless Tales</string>
    <string name="default_date">JAN 01</string>
    <string name="date_text">Select Date:</string>
    <string name="attila">Hoki Attila</string>
    <string name="armand">Koltai Armand</string>
    <string name="detail_title">Event title</string>
    <string name="year">2025</string>
    <string name="detail_date">Year</string>
    <string name="detail_location">Location</string>
    <string name="detail_description">Describe what happened</string>
    <string name="detail_link">www.example.com</string>


</resources>